# internal/models/swagger/user.go
@@ -1,0 +1,6 @@
+package swagger
+
+type User struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
+}
